--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ title: john so
       </p>
       <p>
         <span class="badge arxiv"><b>arXiv</b></span>
-        <a target="_blank" href="/media/pdf/spawnnet.pdf">paper</a> |
+        &#123; <a target="_blank" href="/media/pdf/spawnnet.pdf">paper</a> |
         <a target="_blank" href="https://arxiv.org/abs/2307.03567" >arXiv</a> |
         <a target="_blank" href="https://xingyu-lin.github.io/spawnnet/">website</a> |
-        <a target="_blank" href="https://github.com/johnrso/spawnnet">code</a>
+        <a target="_blank" href="https://github.com/johnrso/spawnnet">code</a> &#125;
       </p>
     </div>
     <a target="_blank" href="https://xingyu-lin.github.io/spawnnet/">
@@ -95,10 +95,10 @@ title: john so
       </p>
       <p>
         <span class="badge conference"><b>CoRL 2022</b></span>
-        <a target="_blank" href="/media/pdf/sim-to-seg.pdf" >paper</a> |
+        &#123; <a target="_blank" href="/media/pdf/sim-to-seg.pdf" >paper</a> |
         <a target="_blank" href="https://arxiv.org/abs/2210.14721">arXiv</a> |
         <a target="_blank" href="https://sites.google.com/view/sim2segcorl2022/home">website</a> |
-        <a target="_blank" href="https://github.com/rll-research/sim2seg">code</a>
+        <a target="_blank" href="https://github.com/rll-research/sim2seg">code</a> &#125;
       </p>
     </div>
     <a target="_blank" href="https://sites.google.com/view/sim2segcorl2022/home">
@@ -138,7 +138,7 @@ title: john so
       <p>
         Outside of research, I spent the majority of my time at Berkeley helping to build, organize, and
         lead <a target="_blank" href="https://ml.berkeley.edu/" >Machine Learning at Berkeley (ML@B)</a>,
-        serving as the organization's president in Fall 2022. We presented a white paper about our organization, structure,
+        serving as the organization's president in Fall 2022. We presented a white paper about our structure
         and initiatives at the NeurIPS 2022 <a target="_blank" href="https://sites.google.com/view/broadening-collaboration-in-ml/home">Broadening Research Collaborations in ML Workshop</a>;
         you may find a preprint <a target="_blank" href="/media/pdf/built_to_last.pdf" >here</a>.
       </p><br>
