--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: john so
 ---
 
 <div class="section">
-  <div class="project">
+  <div class="subsection">
     <button onclick="dark()">
       <div class="title-img">
           <img src="/media/img/headshot.jpeg" alt="me!">
@@ -44,8 +44,10 @@ title: john so
   </div>
 </div>
 <div class="section">
-  <h2>publications</h2>
-  <div class="project">
+  <div class="text-container">
+    <h2>publications</h2>
+  </div>
+  <div class="subsection">
     <div class="text-container">
       <h3>SpawnNet: Learning Generalizable Visuomotor Skills from Pre-trained Networks</h3>
       <p>
@@ -76,7 +78,7 @@ title: john so
       </div>
     </a>
   </div>
-  <div class="project">
+  <div class="subsection">
     <div class="text-container">
       <h3>Sim-to-Real via Sim-to-Seg: End-to-end Off-road Autonomous Driving Without Real Data</h3>
       <p>
@@ -111,8 +113,10 @@ title: john so
   </div>
 </div>
 <div class="section">
-  <h2>teaching</h2>
-  <div class="project">
+  <div class="text-container">
+    <h2>teaching</h2>
+  </div>
+  <div class="subsection">
     <div class="text-container">
       <h3>CS 189: Introduction to Machine Learning</h3>
       <p>
@@ -120,7 +124,7 @@ title: john so
       </p>
     </div>
   </div>
-  <div class="project">
+  <div class="subsection">
     <div class="text-container">
       <h3>CS 61A: Structure and Interpretation of Computer Programs</h3>
       <p>
@@ -134,7 +138,7 @@ title: john so
 <div class="section">
   <div class="text-container">
     <h2>miscellaneous</h2>
-    <div class="project">
+    <div class="subsection">
       <p>
         Outside of research, I spent the majority of my time at Berkeley helping to build, organize, and
         lead <a target="_blank" href="https://ml.berkeley.edu/" >Machine Learning at Berkeley (ML@B)</a>,
