--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@ title: john so
 <div class="section">
   <div class="text-container">
     <h2>miscellaneous</h2>
-    <div class="subsection">
+  </div>
+  <div class="subsection">
+    <div class="text-container">
       <p>
         Outside of research, I spent the majority of my time at Berkeley helping to build, organize, and
         lead <a target="_blank" href="https://ml.berkeley.edu/" >Machine Learning at Berkeley (ML@B)</a>,
