reverse light/dark, update info

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ title: john so
           <script>
             function dark() {
               let element = document.body;
-              element.classList.toggle("dark");
+              element.classList.toggle("light");
             }
             </script>
       </div>
     </button>
     <div class="text-container title-text">
       <h1>john so</h1>
-      <p><i>johnianrso &lt;at&gt; berkeley &lt;dot&gt; edu</i></p>
+      <p><i>johnso &lt;at&gt; stanford &lt;dot&gt; edu</i></p>
       <p> &#123;
         <a target="_blank" href="https://github.com/johnrso">github</a> |
         <a target="_blank" href="https://twitter.com/johnrso_">twitter</a> |
@@ -29,7 +29,7 @@ title: john so
   </div>
   <div class="text-container">
     <p>
-      I am an incoming MS CS student at <a target="_blank" href="https://www.stanford.edu/">Stanford</a>; this past year,
+      I am a first year MS CS student at <a target="_blank" href="https://www.stanford.edu/">Stanford</a>; this past year,
       I finished my BS EECS at <a target="_blank" href="https://engineering.berkeley.edu/">UC Berkeley</a>, where I was fortunate to be advised by
       <a target="_blank" href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
       <a target="_blank" href="https://stepjam.github.io/">Stephen James</a>, and
