updated site for winter

--- a/index.html
+++ b/index.html
@@ -29,17 +29,19 @@ title: john so
   </div>
   <div class="text-container">
     <p>
-      I am a first year MS CS student at <a target="_blank" href="https://www.stanford.edu/">Stanford</a>; this past year,
-      I finished my BS EECS at <a target="_blank" href="https://engineering.berkeley.edu/">UC Berkeley</a>, where I was fortunate to be advised by
+      I am a first year MS CS student at <a target="_blank" href="https://www.stanford.edu/">Stanford</a>, where I am fortunate to work with
+      <a target="_blank" href="https://shurans.github.io/">Shuran Song</a> and
+      <a target="_blank" href="https://jiajunwu.com/">Jiajun Wu</a> on robot learning.
+      I will also be an AI Resident at
+      <a href="https://www.1x.tech/" target="_blank">1X</a> this upcoming year, where I will be focusing on humanoid robot learning.
+      I recently finished my BS EECS at <a target="_blank" href="https://engineering.berkeley.edu/">UC Berkeley</a>, where I was fortunate to be advised by
       <a target="_blank" href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
       <a target="_blank" href="https://stepjam.github.io/">Stephen James</a>, and
       <a target="_blank" href="https://xingyu-lin.github.io/">Xingyu Lin</a> as a part of Berkeley's
       <a target="_blank" href="https://rll.berkeley.edu/">Robot Learning Lab</a>.
     </p><br>
     <p>
-      Broadly, I am interested in how real-world robots can operate "in the wild"; recently, I have been studying how skills, affordances,
-      and semantics can be generalized using internet-scale image and video data in the context of robotics. Long term, I am particularly
-      interested in leveraging perspectives from cognitive science and psychology to inform how robots can learn from humans, and how robots can learn like humans.
+      Broadly, I am interested in how real-world robots can operate "in the wild"; towards this, my recent research interests have been in efficiently grounding large scale text, image, and video data from pre-trained models into embodiment-specific robotics data. Long term, I am particularly interested in leveraging perspectives from cognitive science and psychology to inform how robots can learn from humans, and how robots can learn like humans.
     </p>
   </div>
 </div>
@@ -114,6 +116,14 @@ title: john so
 <div class="section">
   <div class="text-container">
     <h2>teaching</h2>
+  </div>
+  <div class="subsection">
+    <div class="text-container">
+      <h3>CS 229: Machine Learning</h3>
+      <p>
+        <a target="_blank" href="https://cs229.stanford.edu/">Winter 2024</a>: 50% Course Assistant.
+      </p>
+    </div>
   </div>
   <div class="subsection">
     <div class="text-container">
