--- a/index.html
+++ b/index.html
@@ -29,25 +29,39 @@ title: john so
   </div>
   <div class="text-container">
     <p>
-      I am a first year MS CS student at <a target="_blank" href="https://www.stanford.edu/">Stanford</a>, where I am fortunate to work with
+      I am a first year MS CS student at <a target="_blank" href="https://www.stanford.edu/">Stanford University</a> advised by
       <a target="_blank" href="https://shurans.github.io/">Shuran Song</a> and
-      <a target="_blank" href="https://jiajunwu.com/">Jiajun Wu</a> on robot learning.
-      I will also be an AI Resident at
-      <a href="https://www.1x.tech/" target="_blank">1X</a> this upcoming year, where I will be focusing on humanoid robot learning.
-      I recently finished my BS EECS at <a target="_blank" href="https://engineering.berkeley.edu/">UC Berkeley</a>, where I was fortunate to be advised by
+      <a target="_blank" href="https://jiajunwu.com/">Jiajun Wu</a>.
+    <!-- </p><br>
+    <p> -->
+      I will also be an AI Resident at <a target="_blank" href="https://www.1x.tech/about">1X</a> this summer working on humanoid robotics.
+    <!-- </p><br>
+    <p> -->
+      Previously, I finished my BS EECS at <a target="_blank" href="https://engineering.berkeley.edu/">UC Berkeley</a>, where I was fortunate to be advised by
       <a target="_blank" href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
       <a target="_blank" href="https://stepjam.github.io/">Stephen James</a>, and
       <a target="_blank" href="https://xingyu-lin.github.io/">Xingyu Lin</a> as a part of Berkeley's
       <a target="_blank" href="https://rll.berkeley.edu/">Robot Learning Lab</a>.
-    </p><br>
-    <p>
-      Broadly, I am interested in how real-world robots can operate "in the wild"; towards this, my recent research interests have been in efficiently grounding large scale text, image, and video data from pre-trained models into embodiment-specific robotics data. Long term, I am particularly interested in leveraging perspectives from cognitive science and psychology to inform how robots can learn from humans, and how robots can learn like humans.
     </p>
   </div>
 </div>
 <div class="section">
   <div class="text-container">
-    <h2>publications</h2>
+    <h2>research</h2>
+  </div>
+  <div class="subsection">
+    <div class="text-container">
+      <p>
+        My dream is for robots to become an everyday household occurrence. Towards this, I aim to answer two questions:
+      </p>
+      <ol>
+        <li>How do we effectively pre-train using out-of-distribution data, such as cross-embodiment demos or videos?</li>
+        <li>How do we efficiently use in-domain robotics data to enable few-shot policy learning?</li>
+      </ol>
+      <p>
+        My recent interests are in capturing priors from internet-scale videos for robot learning, such as motion and skills. Long term, I hope to leverage perspectives from cognitive science to inform how robots can learn from and like humans.
+      </p>
+    </div>
   </div>
   <div class="subsection">
     <div class="text-container">
@@ -119,27 +133,27 @@ title: john so
   </div>
   <div class="subsection">
     <div class="text-container">
-      <h3>CS 229: Machine Learning</h3>
+      <a target="_blank" href="https://cs229.stanford.edu/"><h3>CS 229: Machine Learning</h3></a>
       <p>
-        <a target="_blank" href="https://cs229.stanford.edu/">Winter 2024</a>: 50% Course Assistant.
+        Winter 2024: 50% Course Assistant.
       </p>
     </div>
   </div>
   <div class="subsection">
     <div class="text-container">
-      <h3>CS 189: Introduction to Machine Learning</h3>
+      <a target="_blank" href="https://people.eecs.berkeley.edu/~jrs/189/"><h3>CS 189: Introduction to Machine Learning</h3></a>
       <p>
-        <a target="_blank" href="https://people.eecs.berkeley.edu/~jrs/189/">Spring 2023</a>: 20 Hour Teaching Assistant.
+        Spring 2023: 20 Hour Teaching Assistant.
       </p>
     </div>
   </div>
   <div class="subsection">
     <div class="text-container">
-      <h3>CS 61A: Structure and Interpretation of Computer Programs</h3>
+      <a target="_blank" href="https://cs61a.org/"><h3>61A: Structure and Interpretation of Computer Programs</h3></a>
       <p>
-        <a target="_blank" href="https://inst.eecs.berkeley.edu/~cs61a/fa22/">Fall 2022</a>: 8 Hour Teaching Assistant. <br>
-        <a target="_blank" href="https://inst.eecs.berkeley.edu/~cs61a/sp22/">Spring 2022</a>: 20 Hour Head Teaching Assistant (Content). <br>
-        <a target="_blank" href="https://inst.eecs.berkeley.edu/~cs61a/fa21/">Fall 2021</a>: 8 Hour Teaching Assistant. <br>
+        Fall 2022: 8 Hour Teaching Assistant. <br>
+        Spring 2022: 20 Hour Head Teaching Assistant (Content). <br>
+        Fall 2021: 8 Hour Teaching Assistant. <br>
       </p>
     </div>
   </div>
@@ -151,14 +165,15 @@ title: john so
   <div class="subsection">
     <div class="text-container">
       <p>
-        Outside of research, I spent the majority of my time at Berkeley helping to build, organize, and
+        As an undergrad, I spent the majority of my time outside of research helping to build, organize, and
         lead <a target="_blank" href="https://ml.berkeley.edu/" >Machine Learning at Berkeley (ML@B)</a>,
         serving as the organization's president in Fall 2022. We presented a white paper about our structure
         and initiatives at the NeurIPS 2022 <a target="_blank" href="https://sites.google.com/view/broadening-collaboration-in-ml/home">Broadening Research Collaborations in ML Workshop</a>;
-        you may find a preprint <a target="_blank" href="/media/pdf/built_to_last.pdf" >here</a>.
-      </p><br>
+        you may find a preprint <a target="_blank" href="/media/pdf/built_to_last.pdf">here</a>.
+      </p>
+      <br>
       <p>
-        Generally, I like to think about how to best teach, learn, and optimize for fulfillment. Feel free to shoot an email or DM if you'd like to chat :&#41;
+        I like to think about how to best teach, learn, and optimize for fulfillment. Shoot me an email or DM if you'd like to chat :&#41;
       </p>
     </div>
   </div>
