--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ title: john so
         <li>How do we efficiently use in-domain robotics data to enable few-shot policy learning?</li>
       </ol>
       <p>
-        My recent interests are in capturing priors from internet-scale videos for robot learning, such as motion and skills. Long term, I hope to leverage perspectives from cognitive science to inform how robots can learn from and like humans.
+        My recent interests are in capturing priors from actionless videos for robot learning, such as motion and skills. Long term, I hope to leverage perspectives from cognitive science to inform how robots can learn from and like humans.
       </p>
     </div>
   </div>
@@ -133,28 +133,9 @@ title: john so
   </div>
   <div class="subsection">
     <div class="text-container">
-      <a target="_blank" href="https://cs229.stanford.edu/"><h3>CS 229: Machine Learning</h3></a>
-      <p>
-        Winter 2024: 50% Course Assistant.
-      </p>
-    </div>
-  </div>
-  <div class="subsection">
-    <div class="text-container">
-      <a target="_blank" href="https://people.eecs.berkeley.edu/~jrs/189/"><h3>CS 189: Introduction to Machine Learning</h3></a>
-      <p>
-        Spring 2023: 20 Hour Teaching Assistant.
-      </p>
-    </div>
-  </div>
-  <div class="subsection">
-    <div class="text-container">
-      <a target="_blank" href="https://cs61a.org/"><h3>61A: Structure and Interpretation of Computer Programs</h3></a>
-      <p>
-        Fall 2022: 8 Hour Teaching Assistant. <br>
-        Spring 2022: 20 Hour Head Teaching Assistant (Content). <br>
-        Fall 2021: 8 Hour Teaching Assistant. <br>
-      </p>
+      <p><b><a target="_blank" href="https://cs229.stanford.edu/">CS 229: Machine Learning</a></b>: Winter 2024</p>
+      <p><b><a target="_blank" href="https://people.eecs.berkeley.edu/~jrs/189/">CS 189: Introduction to Machine Learning</a></b>: Spring 2023</p>
+      <p><b><a target="_blank" href="https://cs61a.org/">CS 61A: Structure and Interpretation of Computer Programs</a></b>: Fall 2022, Spring 2022 (Head TA), Fall 2021</p>
     </div>
   </div>
 </div>
