add atm, website update

--- a/index.html
+++ b/index.html
@@ -65,6 +65,37 @@ title: john so
   </div>
   <div class="subsection">
     <div class="text-container">
+      <h3>Any-point Trajectory Modeling for Policy Learning</h3>
+      <p>
+        <a target="_blank" href="https://alvinwen428.github.io/">Chuan Wen</a>*,
+        <a target="_blank" href="https://xingyu-lin.github.io/">Xingyu Lin</a>*,
+        <b><u>John So</u></b>*,
+        <a target="_blank" href="https://www.cse.cuhk.edu.hk/~qdou/">Qi Dou</a>,
+        <a target="_blank" href="https://ck-kai.github.io/">Kai Chen</a>,
+        <a target="_blank" href="https://yang-gao.weebly.com/">Yang Gao</a>,
+        <a target="_blank" href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>
+      </p>
+      <p>
+        We learn to predict the future trajectories of arbitrary points by pre-training on actionless videos. Using these trajectories for downstream policy learning, we demonstrate sample-efficient learning and cross-embodiment knowledge transfer.
+      </p>
+      <p>
+        &#123; <a target="_blank" href="/media/pdf/atm.pdf">paper</a> |
+        <a target="_blank" href="https://arxiv.org/abs/2401.00025" >arXiv</a> |
+        <a target="_blank" href="https://xingyu-lin.github.io/atm/">website</a>
+        <!-- <a target="_blank" href="https://github.com/johnrso/spawnnet">code</a>  -->
+        &#125;
+      </p>
+    </div>
+    <a target="_blank" href="https://xingyu-lin.github.io/atm/">
+      <div class="project-media">
+        <video src="/media/vid/atm.mp4" autoplay muted inline loop>
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </a>
+  </div>
+  <div class="subsection">
+    <div class="text-container">
       <h3>SpawnNet: Learning Generalizable Visuomotor Skills from Pre-trained Networks</h3>
       <p>
         <a target="_blank" href="https://xingyu-lin.github.io/">Xingyu Lin</a>*,
@@ -79,6 +110,7 @@ title: john so
         pre-trained representations.
       </p>
       <p>
+        <span class="badge conference"><b>ICRA 2024</b></span>
         &#123; <a target="_blank" href="/media/pdf/spawnnet.pdf">paper</a> |
         <a target="_blank" href="https://arxiv.org/abs/2307.03567" >arXiv</a> |
         <a target="_blank" href="https://xingyu-lin.github.io/spawnnet/">website</a> |
