--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@ title: john so
   <div class="subsection">
     <div class="text-container">
       <p>
-        My dream is for robots to become an everyday household occurrence. Towards this, I aim to answer two questions:
+        My dream is for robots to become an everyday household occurrence; an important step is to enable robots to quickly adapt prior knowledge to new scenes or tasks. Towards this, I aim to answer two questions:
       </p>
       <ol>
-        <li>How do we effectively pre-train using out-of-distribution data, such as cross-embodiment demos or videos?</li>
-        <li>How do we efficiently use in-domain robotics data to enable few-shot policy learning?</li>
+        <li>How do we pre-train using out-of-distribution data, such as cross-embodiment demos or videos?</li>
+        <li>How do we use in-domain robotics data to enable sample-efficient policy learning?</li>
       </ol>
       <p>
-        My recent interests are in capturing priors from actionless videos for robot learning, such as motion and skills. Long term, I hope to leverage perspectives from cognitive science to inform how robots can learn from and like humans.
+        My recent interests are in capturing useful priors from multi-task video datasets for robot learning, such as motion and skills. Long term, I hope to leverage perspectives from cognitive science to inform how robots can learn from and like humans.
       </p>
     </div>
   </div>
