--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@ title: john so
   <div class="text-container">
     <p>
       I am a first year MS CS student at <a target="_blank" href="https://www.stanford.edu/">Stanford University</a> advised by
-      <a target="_blank" href="https://shurans.github.io/">Shuran Song</a> and
-      <a target="_blank" href="https://jiajunwu.com/">Jiajun Wu</a>.
+      <a target="_blank" href="https://shurans.github.io/">Shuran Song</a>.
     <!-- </p><br>
     <p> -->
       I will also be an AI Resident at <a target="_blank" href="https://www.1x.tech/about">1X</a> this summer working on humanoid robotics.
