--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ title: john so
   </div>
   <div class="text-container">
     <p>
-      I am a first year MS CS student at <a target="_blank" href="https://www.stanford.edu/">Stanford University</a> advised by
-      <a target="_blank" href="https://shurans.github.io/">Shuran Song</a>.
+      I am a MS CS student at <a target="_blank" href="https://www.stanford.edu/">Stanford University</a>, where I'm fortunate to be advised by
+      <a target="_blank" href="https://shurans.github.io/">Shuran Song</a> as a member of <a target="_blank" href="https://real.stanford.edu/">REAL</a> (Robotics and Embodied Artificial Intelligence Lab) @ Stanford.
     <!-- </p><br>
     <p> -->
       I will also be an AI Resident at <a target="_blank" href="https://www.1x.tech/about">1X</a> this summer working on humanoid robotics.
