first actual blog post

--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@ title: john so
       </p>
       <br>
       <p>
+        I also keep a blog about my thoughts and experiences. You can find it <a target="_blank" href="/blog.html">here</a>.
+      </p>
+      <br>
+      <p>
         I like to think about how to best teach, learn, and optimize for fulfillment. Shoot me an email or DM if you'd like to chat :&#41;
       </p>
     </div>
