--- a/blog.html
+++ b/blog.html
@@ -6,16 +6,13 @@ title: joso journal
 <div class="title-container">
   <div class="text-container">
     <h1>joso journal</h1>
-    <p>things I've made, thoughts I've thought</p>
     <p>
       <a href="/index.html">home</a>
     </p>
   </div>
-  <div class="title-image-container">
-    <img src="img/me.png" alt="me!">
-  </div>
 </div>
 <div class="text-container">
+  <p>A very informal collection of things I've made and thoughts I've thought:</p>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
@@ -24,4 +21,6 @@ title: joso journal
 </div>
 <hr>
 <br>
-<p>last updated: {{ site.time | date_to_string }}</p>
+<div class="section footer">
+  <p>last updated: {{ site.time | date_to_string }} | <a href="#">&#128640;</a></p>
+</div>
