fix hyperlink to blog

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ title: john so
       </p>
       <br>
       <p>
-        I also keep a blog about my thoughts and experiences. You can find it <a target="_blank" href="/blog.html">here</a>.
+        I also keep a blog about my thoughts and experiences. You can find it <a href="/blog.html">here</a>.
       </p>
       <br>
       <p>
