update website slightly

--- a/index.html
+++ b/index.html
@@ -29,18 +29,14 @@ title: john so
   </div>
   <div class="text-container">
     <p>
-      I am an MS CS student at <a target="_blank" href="https://www.stanford.edu/">Stanford University</a>, where I'm fortunate to be advised by
-      <a target="_blank" href="https://shurans.github.io/">Shuran Song</a> as a member of <a target="_blank" href="https://real.stanford.edu/">REAL</a> (Robotics and Embodied Artificial Intelligence Lab) @ Stanford.
-    <!-- </p><br>
-    <p> -->
-      I will also be an AI Resident at <a target="_blank" href="https://www.1x.tech/about">1X</a> this summer working on humanoid robotics.
-    <!-- </p><br>
-    <p> -->
+      I am currently an AI Resident at <a target="_blank" href="https://www.1x.tech/about">1X</a>.
+      I am also an MS CS at <a target="_blank" href="https://www.stanford.edu/">Stanford University</a>, where I'm fortunate to be advised by
+      <a target="_blank" href="https://shurans.github.io/">Shuran Song</a> as a member of Stanford <a target="_blank" href="https://real.stanford.edu/">REAL</a> (Robotics and Embodied Artificial Intelligence Lab).
       Previously, I finished my BS EECS at <a target="_blank" href="https://engineering.berkeley.edu/">UC Berkeley</a>, where I was fortunate to be advised by
       <a target="_blank" href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
       <a target="_blank" href="https://stepjam.github.io/">Stephen James</a>, and
-      <a target="_blank" href="https://xingyu-lin.github.io/">Xingyu Lin</a> as a part of Berkeley's
-      <a target="_blank" href="https://rll.berkeley.edu/">Robot Learning Lab</a>.
+      <a target="_blank" href="https://xingyu-lin.github.io/">Xingyu Lin</a> as a part of Berkeley
+      <a target="_blank" href="https://rll.berkeley.edu/">RLL</a> (Robot Learning Lab).
     </p>
   </div>
 </div>
@@ -178,7 +174,7 @@ title: john so
     <div class="text-container">
       <p>
         As an undergrad, I spent the majority of my time outside of research helping to build, organize, and
-        lead <a target="_blank" href="https://ml.berkeley.edu/" >Machine Learning at Berkeley (ML@B)</a>,
+        lead <b><a target="_blank" href="https://ml.berkeley.edu/" >Machine Learning at Berkeley (ML@B)</a></b>,
         serving as the organization's president in Fall 2022. We presented a white paper about our structure
         and initiatives at the NeurIPS 2022 <a target="_blank" href="https://sites.google.com/view/broadening-collaboration-in-ml/home">Broadening Research Collaborations in ML Workshop</a>;
         you may find a preprint <a target="_blank" href="/media/pdf/built_to_last.pdf">here</a>.
