--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@ title: john so
   </div>
   <div class="text-container">
     <p>
-      I am currently an AI Resident at <a target="_blank" href="https://www.1x.tech/about">1X</a>.
-      I am also an MS CS at <a target="_blank" href="https://www.stanford.edu/">Stanford University</a>, where I'm fortunate to be advised by
+      I am an MS CS at <a target="_blank" href="https://www.stanford.edu/">Stanford University</a>, where I'm fortunate to be advised by
       <a target="_blank" href="https://shurans.github.io/">Shuran Song</a> as a member of Stanford <a target="_blank" href="https://real.stanford.edu/">REAL</a> (Robotics and Embodied Artificial Intelligence Lab).
+    </p>
+    <br>
+    <p>
+      I most recently spent time as an AI Resident at <a target="_blank" href="https://www.1x.tech/about">1X</a>, where I focused on training foundation policy models for humanoid robots.
       Previously, I finished my BS EECS at <a target="_blank" href="https://engineering.berkeley.edu/">UC Berkeley</a>, where I was fortunate to be advised by
       <a target="_blank" href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
       <a target="_blank" href="https://stepjam.github.io/">Stephen James</a>, and
@@ -51,10 +54,10 @@ title: john so
       </p>
       <ol>
         <li>How do we pre-train using out-of-distribution data, such as cross-embodiment demos or videos?</li>
-        <li>How do we use in-domain robotics data to enable sample-efficient policy learning?</li>
+        <li>How do we effectively scale in-domain robotics data collection to train multi-task and generalizable policies?</li>
       </ol>
       <p>
-        My recent interests are in capturing useful priors from multi-task video datasets for robot learning, such as motion and skills. Long term, I hope to leverage perspectives from cognitive science to inform how robots can learn from and like humans.
+        My recent interests are in capturing useful priors from large video datasets for robot learning, such as motion and skills. Long term, I hope to leverage perspectives from cognitive science to inform how robots can learn from and like humans.
       </p>
     </div>
   </div>
@@ -74,6 +77,7 @@ title: john so
         We learn to predict the future trajectories of arbitrary points by pre-training on actionless videos. Using these trajectories for downstream policy learning, we demonstrate sample-efficient learning and cross-embodiment knowledge transfer.
       </p>
       <p>
+        <span class="badge conference"><b>RSS 2024</b></span>
         &#123; <a target="_blank" href="/media/pdf/atm.pdf">paper</a> |
         <a target="_blank" href="https://arxiv.org/abs/2401.00025" >arXiv</a> |
         <a target="_blank" href="https://xingyu-lin.github.io/atm/">website</a>
@@ -134,7 +138,7 @@ title: john so
         <a target="_blank" href="https://stepjam.github.io/" >Stephen James</a>
       </p>
       <p>
-        We use photorealistic simulation to learn a segmentation model and train a navigation policy with RL in the learned segmentation space.
+        We use photorealistic simulation to learn a segmentation model and train a navigation policy with RL in learned segmentation space.
         We deploy zero-shot to a real vehicle.
       </p>
       <p>
