--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@ title: john so
     </p>
     <br>
     <p>
-      I most recently spent time as an AI Resident at <a target="_blank" href="https://www.1x.tech/about">1X</a>, where I focused on training foundation policy models for humanoid robots.
-      Previously, I finished my BS EECS at <a target="_blank" href="https://engineering.berkeley.edu/">UC Berkeley</a>, where I was fortunate to be advised by
+      I received my BS EECS from <a target="_blank" href="https://engineering.berkeley.edu/">UC Berkeley</a>, where I was advised by
       <a target="_blank" href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
       <a target="_blank" href="https://stepjam.github.io/">Stephen James</a>, and
       <a target="_blank" href="https://xingyu-lin.github.io/">Xingyu Lin</a> as a part of Berkeley
       <a target="_blank" href="https://rll.berkeley.edu/">RLL</a> (Robot Learning Lab).
+      I most recently spent time as an AI Resident at <a target="_blank" href="https://www.1x.tech/about">1X</a>, where I focused on training foundation policy models for humanoid robots.
     </p>
   </div>
 </div>
@@ -53,11 +53,11 @@ title: john so
         My dream is for robots to become an everyday household occurrence; an important step is to enable robots to quickly adapt prior knowledge to new scenes or tasks. Towards this, I aim to answer two questions:
       </p>
       <ol>
-        <li>How do we pre-train using out-of-distribution data, such as cross-embodiment demos or videos?</li>
-        <li>How do we effectively scale in-domain robotics data collection to train multi-task and generalizable policies?</li>
+        <li>How do we pre-train using out-of-distribution data, such as cross-embodiment and actionless data?</li>
+        <li>How do we scale in-domain data collection to pre-train multi-task and generalizable policies?</li>
       </ol>
       <p>
-        My recent interests are in capturing useful priors from large video datasets for robot learning, such as motion and skills. Long term, I hope to leverage perspectives from cognitive science to inform how robots can learn from and like humans.
+        My recent interests are in capturing useful priors from large unstructured datasets for robot learning, such as motion and skills. Long term, I hope to leverage perspectives from cognitive science to inform how robots can learn from and like humans.
       </p>
     </div>
   </div>
@@ -80,9 +80,8 @@ title: john so
         <span class="badge conference"><b>RSS 2024</b></span>
         &#123; <a target="_blank" href="/media/pdf/atm.pdf">paper</a> |
         <a target="_blank" href="https://arxiv.org/abs/2401.00025" >arXiv</a> |
-        <a target="_blank" href="https://xingyu-lin.github.io/atm/">website</a>
-        <!-- <a target="_blank" href="https://github.com/johnrso/spawnnet">code</a>  -->
-        &#125;
+        <a target="_blank" href="https://xingyu-lin.github.io/atm/">website</a> |
+        <a target="_blank" href="https://github.com/Large-Trajectory-Model/ATM">code</a> &#125;
       </p>
     </div>
     <a target="_blank" href="https://xingyu-lin.github.io/atm/">
@@ -138,8 +137,7 @@ title: john so
         <a target="_blank" href="https://stepjam.github.io/" >Stephen James</a>
       </p>
       <p>
-        We use photorealistic simulation to learn a segmentation model and train a navigation policy with RL in learned segmentation space.
-        We deploy zero-shot to a real vehicle.
+        We learn a segmentation model, train a navigation policy in simulation with RL in learned segmentation space, and deploy zero-shot to a real vehicle.
       </p>
       <p>
         <span class="badge conference"><b>CoRL 2022</b></span>
@@ -164,9 +162,9 @@ title: john so
   </div>
   <div class="subsection">
     <div class="text-container">
-      <p><b><a target="_blank" href="https://cs229.stanford.edu/">CS 229: Machine Learning</a></b>: Winter 2024</p>
-      <p><b><a target="_blank" href="https://people.eecs.berkeley.edu/~jrs/189/">CS 189: Introduction to Machine Learning</a></b>: Spring 2023</p>
-      <p><b><a target="_blank" href="https://cs61a.org/">CS 61A: Structure and Interpretation of Computer Programs</a></b>: Fall 2022, Spring 2022 (Head TA), Fall 2021</p>
+      <p><a target="_blank" href="https://cs229.stanford.edu/">CS 229: Machine Learning</a> — Winter 2024</p>
+      <p><a target="_blank" href="https://people.eecs.berkeley.edu/~jrs/189/">CS 189: Introduction to Machine Learning</a> — Spring 2023</p>
+      <p><a target="_blank" href="https://cs61a.org/">CS 61A: Structure and Interpretation of Computer Programs</a> — Fall 2022, Spring 2022 (Head TA), Fall 2021</p>
     </div>
   </div>
 </div>
@@ -178,14 +176,14 @@ title: john so
     <div class="text-container">
       <p>
         As an undergrad, I spent the majority of my time outside of research helping to build, organize, and
-        lead <b><a target="_blank" href="https://ml.berkeley.edu/" >Machine Learning at Berkeley (ML@B)</a></b>,
+        lead <a target="_blank" href="https://ml.berkeley.edu/" >Machine Learning at Berkeley (ML@B)</a>,
         serving as the organization's president in Fall 2022. We presented a white paper about our structure
         and initiatives at the NeurIPS 2022 <a target="_blank" href="https://sites.google.com/view/broadening-collaboration-in-ml/home">Broadening Research Collaborations in ML Workshop</a>;
         you may find a preprint <a target="_blank" href="/media/pdf/built_to_last.pdf">here</a>.
       </p>
       <br>
       <p>
-        I also keep a blog about my thoughts and experiences. You can find it <a href="/blog.html">here</a>.
+        I'm attempting to keep a blog about my thoughts and experiences. You can find it <a href="/blog.html">here</a>.
       </p>
       <br>
       <p>
