--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@ title: john so
       <h1>john so</h1>
       <p><i>johnso &lt;at&gt; stanford &lt;dot&gt; edu</i></p>
       <p> &#123;
+        <a target="_blank" href="/media/pdf/johnso_2023.pdf">resume</a> |
         <a target="_blank" href="https://github.com/johnrso">github</a> |
         <a target="_blank" href="https://twitter.com/johnrso_">twitter</a> |
-        <a target="_blank" href="https://www.linkedin.com/in/johnianrso/">linkedin</a> |
-        <a target="_blank" href="/media/pdf/johnso_2023.pdf">resume</a>
+        <!-- <a target="_blank" href="https://scholar.google.com/citations?user=r0vGtTwAAAAJ">scholar</a> | -->
+        <a target="_blank" href="https://www.linkedin.com/in/johnianrso/">linkedin</a>
       &#125; </p>
     </div>
   </div>
